# spatio

./: .gitignore  BENCHMARK_SYSTEM.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  RELEASE_GUIDE.md  VERSION_MANAGEMENT.md  justfile  test_spatial_debug.rs
.github/: CODEOWNERS  PAGES_SETUP.md  README.md  ruleset.json
.github/CI/: .md
.github/workflows/: auto-release.yml  ci.yml  docs.yml  python.yml  release.yml
assets/: README.md
benches/: spatial_benchmarks.rs
examples/: comprehensive_demo.rs  getting_started.rs  persistence_lifecycle.rs  spatial_queries.rs  trajectory_tracking.rs
py-spatio/: Cargo.toml  LICENSE  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements-lint.txt
py-spatio/examples/: basic_usage.py  performance_demo.py  trajectory_tracking.py
py-spatio/src/: lib.rs
py-spatio/src/spatio/: __init__.py  types.py
py-spatio/tests/: test_spatio.py
scripts/: Cargo.toml  README.md  benchmark_help.sh  bump-version.sh  check-version.sh  generate_benchmarks.rs  run_benchmarks.sh  update_readme.sh
src/: batch.rs  builder.rs  db.rs  error.rs  geometry.rs  index.rs  lib.rs  main.rs  namespace.rs  persistence.rs  spatial.rs  spatial_db.rs  storage.rs  types.rs
tests/: advanced_tests.rs  aof_rewrite_test.rs  integration_tests.rs  performance_tests.rs  spatial_unit_tests.rs
