[package]
name = "spatio_lite"
version = "0.1.0"
edition = "2021"
rust-version = "1.90.0"

[dependencies]
bincode = "1.3"
bytes = "1.5"
geo = "0.31.0"
geohash = "0.13.1"
rstar = "0.11.0"
s2 = "0.0.13"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.11"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "spatial_benchmarks"
harness = false
