[package]
name = "spatio"
version = "0.1.0-alpha.9"
edition = "2021"
rust-version = "1.90.0"
description = "A high-performance, embedded spatio-temporal database for modern applications"
license = "MIT"
repository = "https://github.com/pkvartsianyi/spatio"
homepage = "https://github.com/pkvartsianyi/spatio"
documentation = "https://docs.rs/spatio"
keywords = ["spatial", "database", "geospatial", "embedded", "temporal"]
categories = ["database-implementations", "science::geo"]

[lib]
name = "spatio"
crate-type = ["rlib"]

[dependencies]
bincode = "1.3"
bytes = "1.5"
geo = "0.31.0"
geohash = "0.13.1"
rstar = "0.11.0"
rustc-hash = "1.1"
s2 = "0.0.13"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.11"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "spatial_benchmarks"
harness = false

[[example]]
name = "getting_started"
doc-scrape-examples = true

[[example]]
name = "spatial_queries"

[[example]]
name = "trajectory_tracking"

[[example]]
name = "comprehensive_demo"
