[package]
name = "spatio"
version = "0.1.1-alpha.3"
edition = "2021"
rust-version = "1.90.0"
description = "A high-performance, embedded spatio-temporal database for modern applications"
license = "MIT"
repository = "https://github.com/pkvartsianyi/spatio"
homepage = "https://github.com/pkvartsianyi/spatio"
documentation = "https://docs.rs/spatio"
keywords = ["spatial", "database", "geospatial", "embedded", "temporal"]
categories = ["database-implementations", "science::geo"]

[lib]
name = "spatio"
crate-type = ["rlib"]

[dependencies]
bincode = { version = "1.3", optional = true }
bytes = "1.5"
geo = "0.31.0"
geohash = "0.13.1"
once_cell = "1.19"
rstar = "0.11.0"
rustc-hash = "1.1"
s2 = "0.0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallvec = "1.11"
thiserror = "1.0"
toml = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["aof", "geojson"]
# GeoJSON I/O support (conditionally compiled)
geojson = []
# Append-only file persistence
aof = ["dep:bincode"]
# TOML configuration support
toml = ["dep:toml"]
# All features
full = ["geojson", "aof", "toml"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "spatial_benchmarks"
harness = false

[[example]]
name = "getting_started"
doc-scrape-examples = true

[[example]]
name = "spatial_queries"

[[example]]
name = "trajectory_tracking"

[[example]]
name = "comprehensive_demo"
