[package]
name = "spatio-py"
version = "0.1.0-alpha.5"
edition = "2021"
rust-version = "1.90.0"
description = "Python bindings for Spatio - A high-performance, embedded spatio-temporal database"
license = "MIT"
repository = "https://github.com/pkvartsianyi/spatio"
keywords = ["spatial", "database", "geospatial", "python", "bindings"]
categories = ["database-implementations", "science::geo", "api-bindings"]

[lib]
name = "_spatio"
crate-type = ["cdylib"]

[dependencies]
# Core Spatio dependency
spatio = { path = ".." }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Re-export all the core dependencies needed for Python bindings
bincode = "1.3"
bytes = "1.5"
geo = "0.31.0"
geohash = "0.13.1"
rstar = "0.11.0"
rustc-hash = "1.1"
s2 = "0.0.13"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.11"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []

# Build settings for different profiles
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = true
opt-level = 0
