[package]
name = "spatio-py"
version = "0.1.0-alpha.7"
edition = "2021"
rust-version = "1.90.0"
description = "Python bindings for Spatio - A high-performance, embedded spatio-temporal database"
license = "MIT"
repository = "https://github.com/pkvartsianyi/spatio"
keywords = ["spatial", "database", "geospatial", "python", "bindings"]
categories = ["database-implementations", "science::geo", "api-bindings"]

[lib]
name = "_spatio"
crate-type = ["cdylib"]

[dependencies]
# Core Spatio dependency
spatio = { path = ".." }

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# These dependencies are already included via the main spatio crate

[features]
default = []

# Build settings for different profiles
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = true
opt-level = 0
